force-app/main/default/objects/Signature_Provider_Config__mdt/Signature_Provider_Config__mdt.object-meta.xml
<CustomObject>
    <label>Signature Provider Config</label>
    <pluralLabel>Signature Provider Configs</pluralLabel>
</CustomObject>