force-app/main/default/objects/Signature_Provider_Config__mdt/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description
  >Provider-side account/tenant identifier this integration sends envelopes under (e.g. a DocuSign account id).</description>
    <label>Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>