force-app/main/default/objects/Signature_Provider_Config__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>Display name for this provider.</description>
    <label>Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>